update views editCourse

--- a/views/instructor/addChapter.ejs
+++ b/views/instructor/addChapter.ejs
@@ -107,7 +107,7 @@
 
     <!-- add chapter -->
     <div  id="addChapter"class="container mt-5 mb-5">
-      <form action="/instructor/addChapter/:" method="post" id="formChapter">
+      <form action="/instructor/addChapter/?course_id=<%=course_id%>" method="post" id="formChapter">
         <div class="form-group">
           <label for="chapterName">Chapter name</label>
           <input type="text" class="form-control" id="chapterName" placeholder="How to carry daxua 0/8/1?" name = "chapterName">
@@ -120,7 +120,6 @@
       </form>
       
     </div>
-    <!-- <button id="add-lesson-btn" type="button" class="btn btn-primary" onClick="window.open('/instructor/addLesson');" >Add Lesson</button> -->
 
     <!-- Footer -->
     <div class="container-fluid footer">
