--- a/views/instructor/addCourse.ejs
+++ b/views/instructor/addCourse.ejs
@@ -101,15 +101,17 @@
 
     <!-- Courses -->
     <div class="container mt-5 mb-5">
-      <!-- <form action="/instructor/addCourse" method="post" enctype="multipart/form-data"> -->
-      <form action="/instructor/addCourse" method="post">
+      <form action="/instructor/addCourse" method="post" enctype="multipart/form-data">
           <div class="form-group">
             <label for="courseName">Course name</label>
             <input type="text" class="form-control" id="courseName" placeholder="How to carry daxua 0/8/1?" name="courseName">
           </div>
           <div class="form-group">
             <label for="courseImage">Course image</label>
-            <input type="file" class="form-control-file" id="courseImage" name = "image">
+            <div class="">
+							<img id = "image" alt="Image" width="60%" height="60%" style="display: none;">
+						</div>
+						<input type="file" class="form-control-file" id="courseImage" name = "image" onchange="readURL(this);">
           </div>
           <div class="form-group">
             <label for="category">Category</label>
@@ -130,7 +132,7 @@
           </div>
           <div class="form-group">
               <label for="price">Price</label>
-              <input type="text" class="form-control" id="price" placeholder="699" name = "price">
+              <input type="number" class="form-control" id="price" placeholder="699" name = "price">
           </div>
           <div class="form-group">
             <label for="concurency">Concurency</label>
@@ -197,5 +199,22 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+			function readURL(input) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#image')
+                    .attr('src', e.target.result)
+                    .width('60%')
+                    .height('60%')
+                    .show()
+            };
+
+            reader.readAsDataURL(input.files[0]);
+        }
+			}
+    </script>
   </body>
 </html>
