--- a/public/css/course.css
+++ b/public/css/course.css
@@ -55,7 +55,8 @@ a:hover{
   position: sticky;
   top: 110px;
   left: 100%;
-  width: 400px !important;
+  width: 279px;
+  min-width: 279px;
   background: #fff;
   border-radius: 10px;
   margin-left: 20px;
@@ -122,10 +123,6 @@ a:hover{
   padding-left: 0px;
 }
 
-.card-body {
-  width: 769px;
-}
-
 .course-content-title {
   font-size: 2rem;
   font-weight: 700;
@@ -183,6 +180,33 @@ a:hover{
   font-size: 1rem;
 }
 
-.instructor-description {
-  width: 769px;
+.course-rating {
+  border: 1px solid #000;
+  border-radius: 5px;
 }
+
+.course-rating div:first-child{
+  font-size: 4rem;
+  font-weight: 700;
+  color: #be5a0e;
+}
+
+.course-rating div:nth-child(2) {
+  color:#be5a0e;
+}
+
+#previewCourse .modal-content {
+  background: #000;
+  border: #fff;
+  color: #fff;
+}
+
+#previewCourse .modal-header {
+  flex-direction: column !important;
+}
+
+#previewCourse .modal-header div:first-child {
+  font-size: 1.5rem;
+
+}
+
