--- a/views/user/category.ejs
+++ b/views/user/category.ejs
@@ -65,7 +65,7 @@
           <% if(typeof user !== 'undefined' ) { %>
             <li class="nav-item">
               <a class="nav-link" href="/cart">
-                <i class="fas fa-shopping-cart"></i>
+                <i class="fas fa-shopping-cart"></i><span class="badge badge-danger"><%= user.cartCount %></span>
               </a>
             </li>
             <li class="nav-item">
@@ -107,18 +107,44 @@
     <div class="category-content">
       <div class="row">
         <div class="col-3 category-filter">
-          <button class="btn btn-light">Filter</button>
-          <button class="btn btn-light">Most Popular</button>
+          <div class="d-flex justify-content-between">
+            <div class="filter-title">Filter</div>
+            <label class="switch">
+              <input type="checkbox" checked id="btnFilter">
+              <span class="slider round"></span>
+            </label>
+          </div>
         </div>
         <div class="col-9 text-right">
           <%= payload.count%> results
         </div>
       </div>
       <div class="row">
-        <div class="col-3">
-          
+        <div id="filterSection" class="col-3">
+          <div class="dropdown mb-3">
+            <button class="btn btn-warning btn-block dropdown-toggle" type="button" id="dropdownRating" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <div class="d-flex justify-content-between">
+                <span>Rating</span> <i class="fas fa-sort"></i>
+              </div>
+            </button>
+            <div class="dropdown-menu w-100" aria-labelledby="dropdownRating">
+              <a class="dropdown-item" href="/category-courses/<%= payload.id %>?page=<%= payload.page %>&order_review=ASC">Ascending</a>
+              <a class="dropdown-item" href="/category-courses/<%= payload.id %>?page=<%= payload.page %>&order_review=DESC">Descending</a>
+            </div>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-info btn-block dropdown-toggle" type="button" id="dropdownPrice" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <div class="d-flex justify-content-between">
+                <span>Price</span> <i class="fas fa-sort"></i>
+              </div>
+            </button>
+            <div class="dropdown-menu w-100" aria-labelledby="dropdownPrice">
+              <a class="dropdown-item" href="/category-courses/<%= payload.id %>?page=<%= payload.page %>&order_review=ASC">Ascending</a>
+              <a class="dropdown-item" href="/category-courses/<%= payload.id %>?page=<%= payload.page %>&order_review=DESC">Descending</a>
+            </div>
+          </div>
         </div>
-        <div class="col-9">    
+        <div id="coursesSection"  class="col-9">    
           <% payload.courses.forEach((item) => { %>
             <a href="/courses/<%= item.id %>" class="d-block mb-3">
               <div class="row courses-item">
@@ -167,7 +193,7 @@
                     <% if (payload.page == 1) { %>
                         <li class="page-item disabled"><a class="page-link">First</a></li>
                     <% } else { %>
-                        <li><a class="page-link" href="/products/1">First</a></li>
+                        <li><a class="page-link" href="/category-courses/<%= payload.id %>?page=1">First</a></li>
                     <% } %>
                     <% var i = (Number(payload.page) > 5 ? Number(payload.page) - 4 : 1) %>
                     <% if (i !== 1) { %>
@@ -177,7 +203,7 @@
                         <% if (i == payload.page) { %>
                             <li class="page-item  active"><a class="page-link" ><%= i %></a></li>
                         <% } else { %>
-                            <li><a class="page-link" href="/products/<%= i %>"><%= i %></a></li>
+                            <li><a class="page-link" href="/category-courses/<%= payload.id %>?page=<%= i %>"><%= i %></a></li>
                         <% } %>
                         <% if (i == Number(payload.page) + 4 && i < payload.pageCount) { %>
                             <li class="page-item disabled"><a class="page-link">...</a></li>
@@ -186,7 +212,7 @@
                     <% if (payload.page == payload.pageCount) { %>
                         <li class="page-item disabled"><a class="page-link">Last</a></li>
                     <% } else { %>
-                        <li><a class="page-link" href="/products/<%= payload.pageCount %>">Last</a></li>
+                        <li><a class="page-link" href="/category-courses/<%= payload.id %>?page=<%= payload.pageCount %>">Last</a></li>
                     <% } %>
                 </ul>
             <% } %>
@@ -280,5 +306,23 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  
+  <script>
+    $(document).ready(function(){
+      let filterFlag = true;
+      $("#btnFilter").click(function(){
+        if(filterFlag) {
+          $("#filterSection").hide()
+          $("#coursesSection").removeClass("col-9").addClass("col-12")
+          $("#btnFilter").css("background", "#dae0e5")
+        } else {
+          $("#filterSection").show()
+          $("#coursesSection").removeClass("col-12").addClass("col-9")
+          $("#btnFilter").css("background", "#f8f9fa")
+        }
+        filterFlag = !filterFlag
+      })
+    })
+  </script>
 </body>
 </html>
