--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -64,7 +64,7 @@
             <% if(typeof user !== 'undefined' ) { %>
               <li class="nav-item">
                 <a class="nav-link" href="/cart">
-                  <i class="fas fa-shopping-cart"></i><span class="badge badge-danger">0</span>
+                  <i class="fas fa-shopping-cart"></i><span class="badge badge-danger"><%= user.cartCount %></span>
                 </a>
               </li>
               <li class="nav-item">
