--- a/views/user/course.ejs
+++ b/views/user/course.ejs
@@ -64,7 +64,7 @@
           </li>
           <% if(typeof user !== 'undefined' ) { %>
             <li class="nav-item">
-              <a class="nav-link" href="/user/cart">
+              <a class="nav-link" href="/student/cart">
                 <i class="fas fa-shopping-cart"></i><span class="badge badge-danger" id="cartCount"><%= user.cartCount %></span>
               </a>
             </li>
