--- a/views/user/template.ejs
+++ b/views/user/template.ejs
@@ -63,7 +63,7 @@
           </li>
           <% if(typeof user !== 'undefined' ) { %>
             <li class="nav-item">
-              <a class="nav-link" href="/user/cart">
+              <a class="nav-link" href="/student/cart">
                 <i class="fas fa-shopping-cart"></i>
               </a>
             </li>
